--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -60,13 +60,14 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:textColor="#FFF"
-                android:textSize="40sp"/>
+                android:textSize="18sp"/>
 
             <TextView
                 android:id="@+id/weather_desp"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal"
+                android:gravity="center"
                 android:textColor="#FFF"
                 android:textSize="40sp"/>
 
